src/test/ui/traits/trait-bounds-on-structs-and-enums-static.stderr
error[E0277]: the trait bound `usize: Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums-static.rs:9:11
   |
LL | static X: Foo<usize> = Foo {
   |           ^^^^^^^^^^ the trait `Trait` is not implemented for `usize`
   |
note: required by `Foo`
  --> $DIR/trait-bounds-on-structs-and-enums-static.rs:5:1
   |
LL | struct Foo<T:Trait> {
   | ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
